# DreamBuddy_Proj

./: README.md  main.py  pyproject.toml  requirements.txt
src/: config.py
src/data/: dataset_builder.py  feature_engineering.py  json_loader.py
src/evaluation/: evaluator.py
src/models/: gbm_classifier.py  tfidf_classifier.py
src/text/: cleaner.py
