[project]
name = "nlp-sol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.14.0",
    "emoji>=2.8.0",
    "ftfy>=6.1.3",
    "lightgbm>=4.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "seaborn>=0.12.0",
    "sentencepiece>=0.1.99",
    "tokenizers>=0.15.0",
    "torch>=2.1.0",
    "tqdm>=4.66.0",
    "transformers>=4.35.0",
    "xgboost>=2.0.0",
]
